--- a/index.html
+++ b/index.html
@@ -4,11 +4,92 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Module Eight</title>
+  <title>Responsive Flex</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <h2>Responsive Flex</h2>
+  <div class="continer">
+    <div class="box">
+
+      <h3>First Box</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quo magnam incidunt, repellendus labore quod
+        illo temporibus at deserunt voluptatibus voluptas assumenda aut, facere, dolores tempora optio eum. Aliquid,
+        mollitia?</p>
+    </div>
+    <div class="box">
+
+      <h3>Seconed Box</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quo magnam incidunt, repellendus labore quod
+        illo temporibus at deserunt voluptatibus voluptas assumenda aut, facere, dolores tempora optio eum. Aliquid,
+        mollitia?</p>
+    </div>
+
+  </div>
+  <div class="continer2">
+    <div class="item">Item1</div>
+    <div class="item">Item2</div>
+    <div class="item">Item3</div>
+    <div class="item">Item4</div>
+    <div class="item">Item5</div>
+    <div class="item">Item6</div>
+    <div class="item">Item7</div>
+    <div class="item">Item8</div>
+    <div class="item">Item9</div>
+    <div class="item">Item10</div>
+
+  </div>
+  <main>
+    <section>
+      <div class="row">
+        <img src="images/A.jpg" alt="">
+        <div class="row">
+          <div>
+            <img src="images/B.jpg" alt="">
+          </div>
+          <div>
+            <img src="images/C.jpg" alt="">
+          </div>
+          <div class="vartical-collage">
+            <img src="images/D.jpg" alt="">
+            <img src="images/E.jpg" alt="">
+          </div>
+        </div>
+
+      </div>
+      <div class="row">
+        <div>
+          <img src="images/F.jpg" alt="">
+        </div>
+        <div class="square-collage">
+          <img src="images/G.jpg" alt="">
+          <img src="images/G.jpg" alt="">
+          <img src="images/G.jpg" alt="">
+          <img src="images/G.jpg" alt="">
+        </div>
+        <div>
+          <img src="images/H.jpg" alt="">
+        </div>
+    </section>
+
+    <!-- .continar-grid>.box#box-$*12{box-$} -->
+    <div class="continar-grid">
+      <div class="box-grid" id="box-1">box-1</div>
+      <div class="box-grid" id="box-2">box-2</div>
+      <div class="box-grid" id="box-3">box-3</div>
+      <div class="box-grid" id="box-4">box-4</div>
+      <div class="box-grid" id="box-5">box-5</div>
+      <div class="box-grid" id="box-6">box-6</div>
+      <div class="box-grid" id="box-7">box-7</div>
+      <div class="box-grid" id="box-8">box-8</div>
+      <div class="box-grid" id="box-9">box-9</div>
+      <div class="box-grid" id="box-10">box-10</div>
+      <div class="box-grid" id="box-11">box-11</div>
+      <div class="box-grid" id="box-12">box-12</div>
+    </div>
+  </main>
+
 
 </body>
 
